# trane

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FSRS_PLAN.md  LICENSE  Makefile  README.md  improvement_plan.md  improvements.md  plan.md
.github/action-rs/: grcov.yaml  grcov.yml
.github/actions-rs/: grcov.yml
.github/workflows/: build-with-coverage.yml  build.yml  coverage.yaml  tests-with-coverage.yml
bindings/: BasicAsset.ts  CourseGenerator.ts  CourseManifest.ts  ExerciseAsset.ts  ExerciseFilter.ts  ExerciseManifest.ts  ExerciseTrial.ts  ExerciseType.ts  FilterOp.ts  FilterType.ts  Instrument.ts  KeyValueFilter.ts  KnowledgeBaseConfig.ts  LessonManifest.ts  LiteracyConfig.ts  LiteracyLesson.ts  LiteracyLessonType.ts  MasteryScore.ts  MasteryWindow.ts  MusicAsset.ts  MusicPassage.ts  MusicPieceConfig.ts  PassingScoreOptions.ts  RepositoryMetadata.ts  SavedFilter.ts  SchedulerOptions.ts  SchedulerPreferences.ts  SessionPart.ts  StudySession.ts  StudySessionData.ts  TranscriptionAsset.ts  TranscriptionConfig.ts  TranscriptionLink.ts  TranscriptionPassages.ts  TranscriptionPreferences.ts  UnitFilter.ts  UnitReward.ts  UnitType.ts  UserPreferences.ts
ffi/: trane.js  trane.kt  trane.swift  trane.ts
src/: benchmark.rs  blacklist.rs  course_builder.rs  course_library.rs  data.rs  db_utils.rs  error.rs  exercise_scorer.rs  ffi.rs  filter_manager.rs  graph.rs  lib.rs  mantra_miner.rs  practice_rewards.rs  practice_stats.rs  preferences_manager.rs  repository_manager.rs  review_list.rs  reward_scorer.rs  rewarder.rs  scheduler.rs  scorer.rs  study_session_manager.rs  test_utils.rs  testutil.rs  transcription_downloader.rs  utils.rs
src/blacklist/: test.rs
src/course_builder/: knowledge_base_builder.rs  music.rs
src/course_builder/music/: circle_fifths.rs  intervals.rs  notes.rs  scales.rs
src/data/: course_generator.rs  ffi.rs  filter.rs  music.rs
src/data/course_generator/: improvisation.rs  knowledge_base.rs  literacy.rs  music_piece.rs  trane_improvisation.rs  trane_music_piece.rs  transcription.rs
src/data/course_generator/improvisation/: constants.rs  course_instructions.md
src/data/course_generator/trane_improvisation/: constants.rs  course_instructions.md
src/data/course_generator/transcription/: constants.rs  course_instructions.md
src/data/ffi/: course_generator.rs  filter.rs
src/data/filter/: tests.rs
src/data/music/: circle_fifths.rs  intervals.rs  modes.rs  notes.rs  scales.rs
src/filter_manager/: test.rs
src/graph/: tests.rs
src/practice_stats/: test.rs
src/review_list/: test.rs
src/scheduler/: cache.rs  data.rs  filter.rs  relearn_pile.rs  review_knocker.rs  reward_propagator.rs  shuffler.rs  unit_scorer.rs
src/scorer/: test.rs
testdata/: test_audio.m4a
tests/: basic_tests.rs  blacklist_tests.rs  common.rs  improv_tests.rs  improvisation_tests.rs  knowledge_base_tests.rs  large_tests.rs  metadata_tests.rs  music_piece_tests.rs  superseded_tests.rs  transcription_tests.rs
tests/big_test_library/.trane/: user_preferences.json
tests/big_test_library/improvise_for_real/sing_the_numbers_1/: course_manifest.json
tests/big_test_library/improvise_for_real/sing_the_numbers_2/: course_manifest.json
tests/large_test_library/.trane/: user_preferences.json
tests/small_test_library/improvise_for_real/sing_the_numbers_1/: course_config.json
(+209 files in other folders)
