[package]
name = "trane"
version = "0.28.0"
edition = "2024"
description = "An automated system for learning complex skills"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/trane-project/trane"

[lib]
name = "trane"

[dependencies]
anyhow = "1.0.102"
postcard = { version = "1.1.3", features = ["use-std"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
derive_builder = "0.20.2"
indoc = "2.0.7"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
rand = "0.10.0"
rayon = "1.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = "2.4.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
ustr = { version = "1.1.0", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.bench]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
